fix swagger
